roles/dashboard/files/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dashboard
  namespace: default
spec:
  hosts:
    - dashboard.dev.local
  gateways:
    - default-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - dashboard.dev.local
      route:
        - destination:
            host: kubernetes-dashboard
            port:
              number: 443
